<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".views.InstalledAppActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingVertical="@dimen/bottom_sheet_vertical_padding">

        <TextView
            android:id="@+id/order_by"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/bottom_sheet_row_height"
            android:layout_marginLeft="@dimen/bottom_sheet_margin_left_title"
            android:gravity="center"
            android:text="@string/title_menu_order_by"
            android:textColor="@color/secondary_text" />

        <RelativeLayout
            android:id="@+id/alphabetical_order"
            android:layout_width="match_parent"
            android:layout_height="@dimen/bottom_sheet_row_height">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/bottom_sheet_margin_left_check_box"
                android:layout_toLeftOf="@id/checked_alphabetical_order"
                android:maxLines="1"
                android:text="@string/menu_alphabetical_order"
                android:textColor="@color/primary_text" />

            <ImageView
                android:id="@+id/checked_alphabetical_order"
                android:layout_width="@dimen/bottom_sheet_checked_icon_dimension"
                android:layout_height="@dimen/bottom_sheet_checked_icon_dimension"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/bottom_sheet_checked_icon_margin_right"
                android:src="@drawable/ic_done"
                android:visibility="gone" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/installation_date"
            android:layout_width="match_parent"
            android:layout_height="@dimen/bottom_sheet_row_height">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/bottom_sheet_margin_left_check_box"
                android:layout_toLeftOf="@id/checked_installation_date"
                android:maxLines="1"
                android:text="@string/menu_installation_date"
                android:textColor="@color/primary_text" />

            <ImageView
                android:id="@+id/checked_installation_date"
                android:layout_width="@dimen/bottom_sheet_checked_icon_dimension"
                android:layout_height="@dimen/bottom_sheet_checked_icon_dimension"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/bottom_sheet_checked_icon_margin_right"
                android:src="@drawable/ic_done"
                android:visibility="gone" />
        </RelativeLayout>

        <include layout="@layout/horizontal_separator" />

        <TextView
            android:id="@+id/hide"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/bottom_sheet_row_height"
            android:layout_marginLeft="@dimen/bottom_sheet_margin_left_title"
            android:gravity="center"
            android:text="@string/title_menu_filter"
            android:textColor="@color/secondary_text" />

        <RelativeLayout
            android:id="@+id/all_apps"
            android:layout_width="match_parent"
            android:layout_height="@dimen/bottom_sheet_row_height">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/bottom_sheet_margin_left_check_box"
                android:layout_toLeftOf="@id/checked_all_apps"
                android:maxLines="1"
                android:text="@string/menu_all_apps"
                android:textColor="@color/primary_text" />

            <ImageView
                android:id="@+id/checked_all_apps"
                android:layout_width="@dimen/bottom_sheet_checked_icon_dimension"
                android:layout_height="@dimen/bottom_sheet_checked_icon_dimension"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/bottom_sheet_checked_icon_margin_right"
                android:src="@drawable/ic_done"
                android:visibility="gone" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/user_apps"
            android:layout_width="match_parent"
            android:layout_height="@dimen/bottom_sheet_row_height">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/bottom_sheet_margin_left_check_box"
                android:layout_toLeftOf="@id/checked_user_apps"
                android:maxLines="1"
                android:text="@string/menu_user_apps"
                android:textColor="@color/primary_text" />

            <ImageView
                android:id="@+id/checked_user_apps"
                android:layout_width="@dimen/bottom_sheet_checked_icon_dimension"
                android:layout_height="@dimen/bottom_sheet_checked_icon_dimension"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/bottom_sheet_checked_icon_margin_right"
                android:src="@drawable/ic_done"
                android:visibility="gone" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/chinese_apps"
            android:layout_width="match_parent"
            android:layout_height="@dimen/bottom_sheet_row_height">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/bottom_sheet_margin_left_check_box"
                android:layout_toLeftOf="@id/chinese_chinese_apps"
                android:maxLines="1"
                android:text="@string/menu_chinese_apps"
                android:textColor="@color/primary_text" />

            <ImageView
                android:id="@+id/chinese_chinese_apps"
                android:layout_width="@dimen/bottom_sheet_checked_icon_dimension"
                android:layout_height="@dimen/bottom_sheet_checked_icon_dimension"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/bottom_sheet_checked_icon_margin_right"
                android:src="@drawable/ic_done"
                android:visibility="gone" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/threat_apps"
            android:layout_width="match_parent"
            android:layout_height="@dimen/bottom_sheet_row_height">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/bottom_sheet_margin_left_check_box"
                android:layout_toLeftOf="@id/threat_threat_apps"
                android:maxLines="1"
                android:text="@string/menu_threat_apps"
                android:textColor="@color/primary_text" />

            <ImageView
                android:id="@+id/threat_threat_apps"
                android:layout_width="@dimen/bottom_sheet_checked_icon_dimension"
                android:layout_height="@dimen/bottom_sheet_checked_icon_dimension"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/bottom_sheet_checked_icon_margin_right"
                android:src="@drawable/ic_done"
                android:visibility="gone" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/system_apps"
            android:layout_width="match_parent"
            android:layout_height="@dimen/bottom_sheet_row_height">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/bottom_sheet_margin_left_check_box"
                android:layout_toLeftOf="@id/checked_system_apps"
                android:maxLines="1"
                android:text="@string/menu_system_apps"
                android:textColor="@color/primary_text" />

            <ImageView
                android:id="@+id/checked_system_apps"
                android:layout_width="@dimen/bottom_sheet_checked_icon_dimension"
                android:layout_height="@dimen/bottom_sheet_checked_icon_dimension"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/bottom_sheet_checked_icon_margin_right"
                android:src="@drawable/ic_done"
                android:visibility="gone" />
        </RelativeLayout>

    </LinearLayout>
</layout>